[tool.poetry]
name = "text to x"
version = "0.1.0"
description = ""
authors = ["Paul Rohde <paulrohde675@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^2.14.5"
soundfile = "^0.12.1"
speechbrain = "^0.5.15"
accelerate = "^0.23.0"
transformers = "^4.34.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
